--- a/signal.studio.core/View/TabView.xaml
+++ b/signal.studio.core/View/TabView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:SignalStudio.Core"
-             mc:Ignorable="d"
+             mc:Ignorable="d" x:Name="root"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <Style  TargetType="{x:Type TabControl}">
@@ -48,8 +48,8 @@
                                     <ContentPresenter x:Name="ContentSite" VerticalAlignment="Center"
                                                       HorizontalAlignment="Center" ContentSource="Header"
                                                       RecognizesAccessKey="True" />
-                                    <Button x:Name="Close" Content="x" Margin="8,0,0,0" Width="16" Height="16"
-                                            Command="{Binding TabCloseCommand, ElementName=container}" 
+                                    <Button x:Name="Close" Margin="8,0,0,0" Width="16" Height="16"
+                                            Command="{Binding TabCloseCommand, ElementName=root}" 
                                             CommandParameter="{Binding RelativeSource={RelativeSource AncestorType={x:Type TabItem}}}">
                                         <Button.Style>
                                             <Style TargetType="Button">
@@ -57,6 +57,17 @@
                                                 <Setter Property="Background" Value="Transparent"/>
                                             </Style>
                                         </Button.Style>
+                                        <Path Data="M19 6.41L17.59 5 12 10.59 6.41 5 5 6.41 10.59 12 5 17.59 6.41 19 12 13.41 17.59 19 19 17.59 13.41 12 19 6.41z" RenderTransformOrigin="0.5,0.5"  Margin="0,0,0,0" Fill="Black" >
+                                            <Path.LayoutTransform>
+                                                <TransformGroup>
+                                                    <ScaleTransform ScaleX="0.5" ScaleY="0.5"/>
+                                                    <SkewTransform/>
+                                                    <RotateTransform/>
+                                                    <TranslateTransform/>
+                                                </TransformGroup>
+                                            </Path.LayoutTransform>
+
+                                        </Path>
                                     </Button>
                                 </StackPanel>
                             </Border>
@@ -75,8 +86,5 @@
             </Setter>
         </Style>
     </UserControl.Resources>
-    <TabControl>
-        <TabItem Header="Test"/>
-        <TabItem Header="Test"/>
-    </TabControl>
+    <TabControl x:Name="tabControl" />
 </UserControl>
