--- a/signal.studio.core/MainWindow.xaml
+++ b/signal.studio.core/MainWindow.xaml
@@ -4,10 +4,9 @@
         xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
         xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
         xmlns:local="clr-namespace:SignalStudio.Core"
-        mc:Ignorable="d"
+        mc:Ignorable="d" x:Name="container"
         Title="MainWindow" Height="450" Width="800">
     <Grid>
-        <local:WorkspaceView />
-
+        <local:ToolContainerView x:Name="tool" Margin="16,16,16,16"/>
     </Grid>
 </Window>
