--- a/signal.studio.core/App.xaml
+++ b/signal.studio.core/App.xaml
@@ -2,9 +2,13 @@
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:local="clr-namespace:SignalStudio.Core"
-             StartupUri="MainWindow.xaml">
+             StartupUri="MainView.xaml">
     <Application.Resources>
-        <FontFamily x:Key="Roboto">pack://application:,,,/Resource/Font/Roboto/#Roboto</FontFamily>        
-        
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="/Resource/Icon/Toolbar.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+            <FontFamily x:Key="Roboto">pack://application:,,,/Resource/Font/Roboto/#Roboto</FontFamily>
+        </ResourceDictionary>
     </Application.Resources>
 </Application>
