--- a/signal.studio.workspace/View/ToolContainer.xaml
+++ b/signal.studio.workspace/View/ToolContainer.xaml
@@ -8,22 +8,92 @@
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibilityConverter" />
-
         <Style TargetType="GridSplitter">
             <Setter Property="HorizontalAlignment" Value="Stretch" />
         </Style>
+        <ItemsPanelTemplate x:Key="HorizontalItemsPanelTemplate">
+            <StackPanel Orientation="Horizontal" />
+        </ItemsPanelTemplate>
+        <ItemsPanelTemplate x:Key="Vertical90ItemsPanelTemplate">
+            <StackPanel Orientation="Horizontal" >
+                <StackPanel.LayoutTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="90"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </StackPanel.LayoutTransform>
+            </StackPanel>
+        </ItemsPanelTemplate>
+        <ItemsPanelTemplate x:Key="Vertical270ItemsPanelTemplate">
+            <StackPanel Orientation="Horizontal" >
+                <StackPanel.LayoutTransform>
+                    <TransformGroup>
+                        <ScaleTransform/>
+                        <SkewTransform/>
+                        <RotateTransform Angle="270"/>
+                        <TranslateTransform/>
+                    </TransformGroup>
+                </StackPanel.LayoutTransform>
+            </StackPanel>
+        </ItemsPanelTemplate>
     </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="22"/>
+            <RowDefinition Height="Auto"/>
             <RowDefinition Height="*"/>
-            <RowDefinition Height="22"/>
+            <RowDefinition Height="Auto"/>
         </Grid.RowDefinitions>
         <Grid.ColumnDefinitions>
-            <ColumnDefinition Width="22"/>
+            <ColumnDefinition Width="Auto"/>
             <ColumnDefinition Width="*"/>
-            <ColumnDefinition Width="22"/>
+            <ColumnDefinition Width="Auto"/>
         </Grid.ColumnDefinitions>
+        <Border Grid.Row="0" Grid.Column="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <ItemsControl Grid.Column="0" ItemsSource="{Binding State.TopLeftButtons}" ItemsPanel="{StaticResource HorizontalItemsPanelTemplate}"/>
+                <ItemsControl Grid.Column="2" ItemsSource="{Binding State.TopRightButtons}" ItemsPanel="{StaticResource HorizontalItemsPanelTemplate}"/>
+            </Grid>
+        </Border>
+        <Border Grid.Row="2" Grid.Column="1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <ItemsControl Grid.Column="0" ItemsSource="{Binding State.BottomLeftButtons}" ItemsPanel="{StaticResource HorizontalItemsPanelTemplate}"/>
+                <ItemsControl Grid.Column="2" ItemsSource="{Binding State.BottomRightButtons}" ItemsPanel="{StaticResource HorizontalItemsPanelTemplate}"/>
+            </Grid>
+        </Border>
+        <Border Grid.Row="1" Grid.Column="0">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <ItemsControl Grid.Row="0" ItemsSource="{Binding State.LeftTopButtons}" ItemsPanel="{StaticResource Vertical270ItemsPanelTemplate}"/>
+                <ItemsControl Grid.Row="2" ItemsSource="{Binding State.LeftBottomButtons}" ItemsPanel="{StaticResource Vertical270ItemsPanelTemplate}"/>
+            </Grid>
+        </Border>
+        <Border Grid.Row="1" Grid.Column="2">
+            <Grid>
+                <Grid.RowDefinitions>
+                    <RowDefinition Height="Auto"/>
+                    <RowDefinition Height="*"/>
+                    <RowDefinition Height="Auto"/>
+                </Grid.RowDefinitions>
+                <ItemsControl Grid.Row="0" ItemsSource="{Binding State.RightTopButtons}" ItemsPanel="{StaticResource Vertical90ItemsPanelTemplate}"/>
+                <ItemsControl Grid.Row="2" ItemsSource="{Binding State.RightBottomButtons}" ItemsPanel="{StaticResource Vertical90ItemsPanelTemplate}"/>
+            </Grid>
+        </Border>
         <Grid Grid.Row="1" Grid.Column="1">
             <Grid.RowDefinitions>
                 <RowDefinition Height="*"/>
@@ -38,11 +108,11 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Visibility="{Binding ToolState.TopLeftVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Border Grid.Column="0" Visibility="{Binding State.TopLeftVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <local:ToolPanel/>
                 </Border>
                 <GridSplitter Grid.Column="1" Width="6"/>
-                <Border Grid.Column="2" Visibility="{Binding ToolState.TopRightVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Border Grid.Column="2" Visibility="{Binding State.TopRightVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <local:ToolPanel/>
                 </Border>
             </Grid>
@@ -61,11 +131,11 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Border Grid.Row="0" Visibility="{Binding ToolState.LeftTopVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Border Grid.Row="0" Visibility="{Binding State.LeftTopVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <local:ToolPanel/>
                     </Border>
                     <GridSplitter Grid.Row="1" Height="6"/>
-                    <Border Grid.Row="2" Visibility="{Binding ToolState.LeftBottomVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Border Grid.Row="2" Visibility="{Binding State.LeftBottomVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <local:ToolPanel/>
                     </Border>
                 </Grid>
@@ -77,11 +147,11 @@
                         <RowDefinition Height="Auto"/>
                         <RowDefinition Height="*"/>
                     </Grid.RowDefinitions>
-                    <Border Grid.Row="0" Visibility="{Binding ToolState.RightTopVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Border Grid.Row="0" Visibility="{Binding State.RightTopVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <local:ToolPanel/>
                     </Border>
                     <GridSplitter Grid.Row="1" Height="6"/>
-                    <Border Grid.Row="2" Visibility="{Binding ToolState.RightBottomVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                    <Border Grid.Row="2" Visibility="{Binding State.RightBottomVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                         <local:ToolPanel/>
                     </Border>
                 </Grid>
@@ -93,11 +163,11 @@
                     <ColumnDefinition Width="Auto"/>
                     <ColumnDefinition Width="*"/>
                 </Grid.ColumnDefinitions>
-                <Border Grid.Column="0" Visibility="{Binding ToolState.BottomLeftVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Border Grid.Column="0" Visibility="{Binding State.BottomLeftVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <local:ToolPanel/>
                 </Border>
                 <GridSplitter Grid.Column="1" Width="6"/>
-                <Border Grid.Column="2" Visibility="{Binding ToolState.BottomRightVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
+                <Border Grid.Column="2" Visibility="{Binding State.BottomRightVisible, Mode=OneWay, Converter={StaticResource BooleanToVisibilityConverter}}">
                     <local:ToolPanel/>
                 </Border>
             </Grid>
