--- a/signal.studio.workspace/View/ToolPanel.xaml
+++ b/signal.studio.workspace/View/ToolPanel.xaml
@@ -4,9 +4,28 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Signal.Studio.Workspace.View"
-             mc:Ignorable="d" x:ClassModifier="internal" Background="Red"
+             mc:Ignorable="d" x:ClassModifier="internal"
              d:DesignHeight="450" d:DesignWidth="800">
     <Grid>
-            
+        <Grid.RowDefinitions>
+            <RowDefinition Height="22"/>
+            <RowDefinition Height="*"/>
+        </Grid.RowDefinitions>
+        <Border BorderBrush="Black" BorderThickness="0,0,0,1">
+            <Grid>
+                <Grid.ColumnDefinitions>
+                    <ColumnDefinition Width="Auto"/>
+                    <ColumnDefinition Width="*"/>
+                    <ColumnDefinition Width="Auto"/>
+                </Grid.ColumnDefinitions>
+                <StackPanel Grid.Column="0" Orientation="Horizontal" VerticalAlignment="Center" Margin="4,0">
+                    <TextBlock x:Name="header" />
+                </StackPanel>
+                <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="4,0">
+                    <Button Content="-" Click="ButtonClose_Click" />
+                </StackPanel>
+            </Grid>
+        </Border>
+        <DockPanel x:Name="content" Grid.Row="1" />
     </Grid>
 </UserControl>
