--- a/signal.studio.workspace/View/ToolPanel.xaml
+++ b/signal.studio.workspace/View/ToolPanel.xaml
@@ -6,12 +6,45 @@
              xmlns:local="clr-namespace:Signal.Studio.Workspace.View"
              mc:Ignorable="d" x:ClassModifier="internal"
              d:DesignHeight="450" d:DesignWidth="800">
+    <UserControl.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Signal.Studio.Workspace;component/Resource/Resource.xaml" />
+                <ResourceDictionary>
+                    <Style TargetType="Button" x:Key="ToolHeaderButtonBase">
+                        <Setter Property="Background" Value="Transparent" />
+                        <Setter Property="Template">
+                            <Setter.Value>
+                                <ControlTemplate TargetType="Button">
+                                    <Border Width="22" Height="22" CornerRadius="2" Background="{TemplateBinding Background}">
+                                        <ContentPresenter VerticalAlignment="Center" HorizontalAlignment="Center" />
+                                    </Border>
+                                    <ControlTemplate.Triggers>
+                                        <Trigger Property="IsMouseOver" Value="True">
+                                            <Setter Property="Background" Value="{StaticResource ui.tabbedPane.hoverColor}" />
+                                        </Trigger>
+                                        <Trigger Property="IsPressed" Value="True">
+                                            <Setter Property="Background" Value="{StaticResource ui.*.selectionBackgroundInactive}" />
+                                        </Trigger>
+                                    </ControlTemplate.Triggers>
+                                </ControlTemplate>
+                            </Setter.Value>
+                        </Setter>
+                    </Style>
+                </ResourceDictionary>
+                
+                
+                
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+        
+    </UserControl.Resources>
     <Grid>
         <Grid.RowDefinitions>
-            <RowDefinition Height="22"/>
+            <RowDefinition Height="27"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
-        <Border BorderBrush="Black" BorderThickness="0,0,0,1">
+        <Border BorderBrush="{StaticResource colors.border}" BorderThickness="0,0,0,1">
             <Grid>
                 <Grid.ColumnDefinitions>
                     <ColumnDefinition Width="Auto"/>
@@ -22,7 +55,9 @@
                     <TextBlock x:Name="header" />
                 </StackPanel>
                 <StackPanel Grid.Column="2" Orientation="Horizontal" VerticalAlignment="Center" Margin="4,0">
-                    <Button Content="-" Click="ButtonClose_Click" />
+                    <Button Style="{StaticResource ToolHeaderButtonBase}" Click="ButtonClose_Click">
+                        <Rectangle Width="12" Height="2" Fill="#6E6E6E" />
+                    </Button>
                 </StackPanel>
             </Grid>
         </Border>
