--- a/signal.studio.sample/App.xaml
+++ b/signal.studio.sample/App.xaml
@@ -1,7 +1,11 @@
 ﻿<Application x:Class="Signal.Studio.Sample.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml" StartupUri="MainWindow.xaml">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
-        <ResourceDictionary Source="pack://application:,,,/Signal.Studio.Workspace;component/Resource/Theme/IntellijLightResource.xaml" />
+        <!--<ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="pack://application:,,,/Signal.Studio.Workspace;component/Resource/Theme/IntellijLightResource.xaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>-->
     </Application.Resources>
 </Application>
