--- a/signal.studio.workspace/View/Tool/ToolDock.xaml
+++ b/signal.studio.workspace/View/Tool/ToolDock.xaml
@@ -3,15 +3,48 @@
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
-             xmlns:local="clr-namespace:Signal.Studio.Workspace.View"
              mc:Ignorable="d" x:ClassModifier="internal" x:Name="root"
              d:DesignHeight="450" d:DesignWidth="800"> 
     <UserControl.Resources>
 
+
+
+        <Style TargetType="Button">
+            <Setter Property="IsTabStop" Value="False" />
+            <Setter Property="Focusable" Value="False" />
+            <Setter Property="FocusVisualStyle" Value="{x:Null}" />
+
+
+
+            <Setter Property="Background" Value="Transparent" />
+            <Setter Property="Template">
+                <Setter.Value>
+                    <ControlTemplate TargetType="Button">
+                        <Border Width="22" Height="22" CornerRadius="2" Margin="2" Background="{TemplateBinding Background}">
+                            <ContentPresenter HorizontalAlignment="Center" VerticalAlignment="Center" />
+                            
+                        </Border>
+                        <ControlTemplate.Triggers>
+                            <Trigger Property="IsMouseOver" Value="True">
+                                <Setter Property="Background" Value="#dfdfdf" />
+                            </Trigger>
+                        </ControlTemplate.Triggers>
+
+                    </ControlTemplate>
+                </Setter.Value>
+            </Setter>
+        </Style>
+
     </UserControl.Resources>
     <Grid Background="White">
+        
+        
+        
+        
+        
+        
         <Grid.RowDefinitions>
-            <RowDefinition Height="26"/>
+            <RowDefinition Height="27"/>
             <RowDefinition Height="*"/>
         </Grid.RowDefinitions>
         <Border Grid.Row="0" Background="{StaticResource colors.panel}" BorderBrush="{StaticResource colors.border}" BorderThickness="0,0,0,1">
@@ -22,8 +55,16 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="2" Orientation="Horizontal">
-                    <Button Content="M" Click="Button_Click_1" />
-                    <Button Content="X" Click="Button_Click" />
+                    <Button Click="Setting_Click" ContextMenuService.IsEnabled="False">
+                        <Canvas Width="16" Height="16">
+                            <Path Data="{StaticResource icon.node.editorConfig}" Fill="{StaticResource colors.icon}"/>
+                        </Canvas>
+                    </Button>
+                    <Button Click="Button_Click">
+                        <Canvas Width="16" Height="16">
+                            <Path Data="{StaticResource icon.toolbar.remove}" Fill="{StaticResource colors.icon}"/>
+                        </Canvas>
+                    </Button>
                 </StackPanel>
             </Grid>
         </Border>
