--- a/signal.studio.workspace/View/WorkspaceView.xaml
+++ b/signal.studio.workspace/View/WorkspaceView.xaml
@@ -4,7 +4,7 @@
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
              xmlns:d="http://schemas.microsoft.com/expression/blend/2008" 
              xmlns:local="clr-namespace:Signal.Studio.Workspace.View"
-             mc:Ignorable="d" 
+             mc:Ignorable="d" x:Name="root"
              d:DesignHeight="450" d:DesignWidth="800">
     <UserControl.Resources>
         <ResourceDictionary>
@@ -14,6 +14,60 @@
         </ResourceDictionary>
     </UserControl.Resources>
     <Grid>
-        <local:ToolContainer />
+        <Grid.RowDefinitions>
+            <RowDefinition Height="0"/>
+            <RowDefinition Height="*" />
+            <RowDefinition Height="22"/>
+        </Grid.RowDefinitions>
+        <local:ToolContainer Grid.Row="1" />
+        <Grid Grid.Row="2">
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto"/>
+                <ColumnDefinition Width="*"/>
+                <ColumnDefinition Width="Auto"/>
+            </Grid.ColumnDefinitions>
+            <StackPanel Grid.Column="0" Orientation="Horizontal">
+                <ToggleButton Click="ToolVisible_Click" IsChecked="True">
+                    <ToggleButton.Style>
+                        <Style TargetType="ToggleButton">
+                            <Setter Property="Template">
+                                <Setter.Value>
+                                    <ControlTemplate TargetType="ToggleButton">
+                                        <Border Width="16" Height="16" Margin="3,3" Background="Transparent">
+                                            <ContentPresenter />
+                                        </Border>
+                                        <ControlTemplate.Triggers>
+                                            <Trigger Property="IsChecked" Value="True">
+                                                <Setter Property="Content">
+                                                    <Setter.Value>
+                                                        <Canvas>
+                                                            <Path Data="M4,2 L14,2 L14,12 L4,12 L4,2 Z M5,3 L5,11 L13,11 L13,3 L5,3 Z" Fill="{StaticResource colors.icon}"/>
+                                                            <Path Data="M3,4 L3,13 L12,13 L12,14 L2,14 L2,4 L3,4 Z" Fill="{StaticResource colors.icon}"/>
+                                                        </Canvas>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                            <Trigger Property="IsChecked" Value="False">
+                                                <Setter Property="Content">
+                                                    <Setter.Value>
+                                                        <Canvas>
+                                                            <Path Data="M3,3 L13,3 L13,13 L3,13 L3,3 Z M4,4 L4,12 L12,12 L12,4 L4,4 Z" Fill="{StaticResource colors.icon}"/>
+                                                            <Rectangle Width="1" Height="10" Canvas.Left="1" Canvas.Top="3" Fill="{StaticResource colors.icon}"/>
+                                                            <Rectangle Width="1" Height="10" Canvas.Left="14" Canvas.Top="3" Fill="{StaticResource colors.icon}"/>
+                                                        </Canvas>
+                                                    </Setter.Value>
+                                                </Setter>
+                                            </Trigger>
+                                        </ControlTemplate.Triggers>
+                                    </ControlTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </ToggleButton.Style>
+                </ToggleButton>
+            </StackPanel>
+
+
+        </Grid>
     </Grid>
 </UserControl>
