--- a/signal.studio.workspace/View/Tool/ToolDock.xaml
+++ b/signal.studio.workspace/View/Tool/ToolDock.xaml
@@ -55,7 +55,7 @@
                     <ColumnDefinition Width="Auto"/>
                 </Grid.ColumnDefinitions>
                 <StackPanel Grid.Column="2" Orientation="Horizontal">
-                    <Button Click="Setting_Click" ContextMenuService.IsEnabled="False">
+                    <Button Click="Setting_Click" ContextMenuService.IsEnabled="False" Visibility="Collapsed">
                         <Canvas Width="16" Height="16">
                             <Path Data="{StaticResource icon.node.editorConfig}" Fill="{StaticResource colors.icon}"/>
                         </Canvas>
@@ -68,6 +68,8 @@
                 </StackPanel>
             </Grid>
         </Border>
-        <ContentControl Grid.Row="1" Content="{Binding ToolContent, ElementName=root}" />
+        <ScrollViewer Grid.Row="1" VerticalScrollBarVisibility="Auto" HorizontalScrollBarVisibility="Auto">
+            <ContentControl Content="{Binding ToolContent, ElementName=root}" />
+        </ScrollViewer>
     </Grid>
 </UserControl>
